deps/v8/test/message/fail/unparenthesized-exponentiation-expression.out
*%(basename)s:7: SyntaxError: Unary operator used immediately before exponentiation expression. Parenthesis must be used to disambiguate operator precedence
-5**2
^^^^
SyntaxError: Unary operator used immediately before exponentiation expression. Parenthesis must be used to disambiguate operator precedence
